--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,4 +1,8 @@
 @import 'tailwindcss';
+/*custom media dimensions Does not work for some reason*/
+/* @custom-variant mobile @media (max-width: 767px);
+@custom-variant tablet @media (min-width: 768px) and (max-width: 1279px);
+@custom-variant desktop @media (min-width: 1280px); */
 
 @layer base {
   /* --- Custom media queries --- */
