--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -11,10 +11,6 @@
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
     --border: 214.3 31.8% 91.4%;
-
-    --btn-bg: #1e3a8a;
-    --btn-text: white;
-    --btn-hover: #1e40af;
   }
 
   body {
@@ -349,5 +345,100 @@
       padding-left: 4rem;
       padding-right: 4rem;
     }
+  }
+
+/*--------- Scrollbar --------- */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .outline-status-0:active,
+  .outline-status-0:hover,
+  .outline-status-0:focus {
+    outline: 0;
+    outline-offset: 0;
+  }
+
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+  .scrollbar-unset {
+    overflow: unset;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    @apply size-0.5;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    @apply rounded-b-lg bg-gray-400 border-1 border-gray-200;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    @apply rounded-b-lg bg-gray-900;
+  }
+
+  .custom-middle-scrollbar::-webkit-scrollbar {
+    @apply size-[3px];
+  }
+
+  .custom-middle-scrollbar::-webkit-scrollbar-track {
+    @apply rounded-b-lg bg-transparent border-0;
+  }
+
+  .custom-middle-scrollbar::-webkit-scrollbar-thumb {
+    @apply rounded-b-lg bg-gray-400;
+  }
+
+  /* ------- Button ------- */
+  .btn {
+  @apply bg-blue-900 text-white hover:!bg-blue-800;
+}
+  .btn-secondary {
+    @apply bg-gray-300  text-gray-700 hover:!bg-gray-700 hover:text-white;
+  }
+
+  /* ------- aimation --------- */
+  @keyframes fade-in-up {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  .animate-fade-in-up {
+    animation: fade-in-up 0.6s ease-out both;
+  }
+  @keyframes fade-in {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  .animate-fade-in {
+    animation: fade-in 1s ease-out both;
+  }  
+  .delay-200 {
+    animation-delay: 0.2s;
+  }
+  .delay-400 {
+    animation-delay: 0.4s;
+  }
+  .delay-600 {
+    animation-delay: 0.6s;
+  }
+  .delay-800 {
+    animation-delay: 0.8s;
+  }
+  .delay-1000 {
+    animation-delay: 1s;
   }
 }
