--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -441,4 +441,24 @@
   .delay-1000 {
     animation-delay: 1s;
   }
+
+  /* ----- Headers ------ */
+  .header1 {
+    @apply text-3xl md:text-4xl font-bold text-gray-700;
+  }
+  .header2 {
+    @apply text-2xl md:text-3xl font-bold text-gray-700;
+  }
+  .header3 {
+    @apply text-xl md:text-2xl font-bold text-gray-700;
+  }
+  .header4 {
+    @apply text-lg md:text-xl font-bold text-gray-700;
+  }
+  .header5 {
+    @apply text-base md:text-lg font-bold text-gray-700;
+  }
+  .header6 {
+    @apply text-sm md:text-base font-bold text-gray-700;
+  }
 }
