--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -395,12 +395,20 @@
 
   /* ------- Button ------- */
   .btn {
-  @apply bg-blue-900 text-white hover:!bg-blue-800;
-}
+    @apply bg-blue-900 text-white hover:!bg-blue-800;
+  }
+  .btn:disabled {
+    @apply bg-gray-400  !text-gray-200 hover:!bg-gray-400 !hover:text-gray-200;
+  }
   .btn-secondary {
     @apply bg-gray-300  text-gray-700 hover:!bg-gray-700 hover:text-white;
   }
-
+  .btn-danger {
+    @apply bg-red-900 text-white hover:!bg-red-800;
+  }
+  .btn-success {
+    @apply bg-green-900 text-white hover:!bg-green-800;
+  }
   /* ------- aimation --------- */
   @keyframes fade-in-up {
     0% {
