--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -398,7 +398,7 @@
     @apply bg-blue-900 text-white hover:!bg-blue-800;
   }
   .btn:disabled {
-    @apply bg-gray-400  !text-gray-200 hover:!bg-gray-400 !hover:text-gray-200;
+    @apply bg-gray-400  !text-gray-200 hover:!bg-gray-400 hover:!text-gray-200;
   }
   .btn-secondary {
     @apply bg-gray-300  text-gray-700 hover:!bg-gray-700 hover:text-white;
